# AnimeListv10

./: .gitignore  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  update.py  vite.config.ts
.github/workflows/: push.yml  release.yml  update.yml
src/: App.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/python/: script.py
src-tauri/python/export/: ExportCSV.py  ExportXLSX.py  in.json
src-tauri/src/: commands.rs  data_commands.rs  file_manager.rs  main.rs  path_helper.rs  se_app_infos.rs
src/Components/: AnimesTable.tsx  AnimesTableURL.tsx  ChartForm.tsx  CustomChart.tsx  CustomChartDonut.tsx  DetailsInfo.tsx  FileMenu.tsx  MenuBar.tsx  SideBar.tsx  SimpleStatTable.tsx  SimpleStatTableForm.tsx  Statistics.tsx  StatsChartsList.tsx  StatsTableSimple.tsx  StatsTablesList.tsx  TableSettings.tsx  ThreeButtonDialog.tsx  TitleBar.tsx  grammar.peg  output.ts
src/Components/AnimesTable/: AnimesTable.tsx  AnimesTableURL.tsx  ContextMenu.tsx  RecordRow.tsx
src/Components/Helpers/: CustomNavLink.tsx  useAnime.tsx  useCustomTypes.tsx  useRecord.tsx
src/Components/RecordsTable/: ContextMenu.tsx  RecordContextMenu.tsx  RecordRow.tsx  RecordTable.tsx  RecordsTableURL.tsx
src/Components/Tabs/: TableSettings.tsx  UserPreferences.tsx  UserSettings.tsx
src/Pages/: 404.tsx  Animes.tsx  Details.tsx  Home.tsx  Records.tsx  test.css
src/context/: AppContext.tsx  AuthContext.tsx  DataContext.tsx  index.tsx
