[package]
name = "animes_data_list"
version = "0.1.12"
description = "A Tauri App to import, edit, create, export, and apply stats on data files"
authors = ["Nyuu-s"]
license = ""
repository = ""
default-run = "animes_data_list"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "dialog-all", "updater", "shell-sidecar", "app-all", "notification-all", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
zstd = "0.12.3"
lazy_static = "1.4.0"
sha2 = "0.10.6"
csv = "1.2.2"
serde_merge = "0.1.3"





[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
